--- a/member-service/src/main/resources/application.yml
+++ b/member-service/src/main/resources/application.yml
@@ -4,6 +4,14 @@ server:
 spring:
   application:
     name: member-service
+  datasource:
+    url: jdbc:postgresql://localhost:5432/memberdb
+    username: postgres
+    password: password
+  jpa:
+    hibernate:
+      ddl-auto: update
+    show-sql: true
 
 eureka:
   client:
