--- a/settlement-service/src/main/resources/application.yml
+++ b/settlement-service/src/main/resources/application.yml
@@ -1,11 +1,11 @@
 server:
-  port: 0
+  port: 8083
 
 spring:
   application:
     name: settlement-service
   datasource:
-    url: jdbc:postgresql://localhost:5432/memberdb
+    url: jdbc:postgresql://localhost:5432/settlementdb
     username: postgres
     password: password
   jpa:
