feat: member-service 로그인/인증 기능 구현
- JWT 기반 로그인/로그아웃/토큰 갱신 API 추가
- Spring Security 및 PasswordEncoder 설정
- Redis 기반 RefreshToken 저장소 구현
- settlement-service, order-service 의존성 및 기능 보강
- gateway-service 초기 설정 추가

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,29 +3,78 @@ version: '3.8'
 services:
   postgres:
     image: postgres:15
-    container_name: event-driven-postgres
     environment:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: password
-      POSTGRES_INITDB_ARGS: "--encoding=UTF8"
     ports:
       - "5432:5432"
     volumes:
-      - postgres_data:/var/lib/postgresql/data
-    networks:
-      - event-driven-network
+      - postgres-data:/var/lib/postgresql/data
+      - ./init-db.sql:/docker-entrypoint-initdb.d/init-db.sql
 
   redis:
     image: redis:7-alpine
-    container_name: event-driven-redis
     ports:
       - "6379:6379"
-    networks:
-      - event-driven-network
+
+  discovery-service:
+    build:
+      context: ./discovery-service
+      dockerfile: Dockerfile
+    ports:
+      - "8761:8761"
+
+  gateway-service:
+    build:
+      context: ./gateway-service
+      dockerfile: Dockerfile
+    ports:
+      - "8000:8000"
+
+  member-service:
+    build:
+      context: ./member-service
+      dockerfile: Dockerfile
+    ports:
+      - "8081:8081"
+    environment:
+      SPRING_DATASOURCE_URL: jdbc:postgresql://postgres:5432/memberdb
+      SPRING_DATA_REDIS_HOST: redis
+      EUREKA_CLIENT_SERVICE_URL_DEFAULTZONE: http://discovery-service:8761/eureka/
+    depends_on:
+      - postgres
+      - redis
+      - discovery-service
+
+  order-service:
+    build:
+      context: ./order-service
+      dockerfile: Dockerfile
+    ports:
+      - "8082:8082"
+    environment:
+      SPRING_DATASOURCE_URL: jdbc:postgresql://postgres:5432/orderdb
+      SPRING_DATA_REDIS_HOST: redis
+      EUREKA_CLIENT_SERVICE_URL_DEFAULTZONE: http://discovery-service:8761/eureka/
+    depends_on:
+      - postgres
+      - redis
+      - discovery-service
+
+  settlement-service:
+    build:
+      context: ./settlement-service
+      dockerfile: Dockerfile
+    ports:
+      - "8083:8083"
+    environment:
+      SPRING_DATASOURCE_URL: jdbc:postgresql://postgres:5432/settlementdb
+      SPRING_DATA_REDIS_HOST: redis
+      EUREKA_CLIENT_SERVICE_URL_DEFAULTZONE: http://discovery-service:8761/eureka/
+    depends_on:
+      - postgres
+      - redis
+      - discovery-service
 
 volumes:
-  postgres_data:
-
-networks:
-  event-driven-network:
-    driver: bridge
+  postgres-data:
