--- a/settlement-service/src/main/resources/application.yml
+++ b/settlement-service/src/main/resources/application.yml
@@ -3,7 +3,7 @@ server:
 
 spring:
   application:
-    name: order-service
+    name: settlement-service
 
   datasource:
     url: jdbc:postgresql://localhost:5432/orderdb
